solve instructor intro click on mobile
Former-commit-id: f9fd1f0b4c3c9a7ddb768b3821805ba9f518c9b6
Former-commit-id: 035a74fa14a0d57f0f6ff5a73494bf1cc62aac3b

--- a/src/less/meetup.less
+++ b/src/less/meetup.less
@@ -464,18 +464,18 @@ section[class^='meetup-landing-page-'] {
   margin: 20px 15px !important;
   width: 240px !important;
 
-  .personal-info {
-    position: relative;
+  // .personal-info {
+  //   position: relative;
 
-    .info {
-      position: absolute;
-      top: 50%;
-      transform: translate(0, -50%);
-      margin: 0 20px 0 0;
-      line-height: 1.7;
-      font-size: 0.65rem !important;
-    }
-  }
+  //   .info {
+  //     position: absolute;
+  //     top: 50%;
+  //     transform: translate(0, -50%);
+  //     margin: 0 20px 0 0;
+  //     line-height: 1.7;
+  //     font-size: 0.65rem !important;
+  //   }
+  // }
 
   .name {
     font-size: 0.85rem !important;
